--- a/css/style.css
+++ b/css/style.css
@@ -106,3 +106,60 @@ body {
     padding: 14px 16px;
     width: 80%;
 }
+
+.bottom_wrapper {
+    display:flex;
+    justify-content: space-between;
+    margin-top: 28px;
+}
+
+.bottom_item {
+    width: 268px;
+    height: 207px;
+    background-color: #D1D1D1;
+    border-radius: 5px;
+    display:flex;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    text-align: center;
+    text-decoration: none;
+    transition: all 0.5s ease-out 0.1s;
+}
+
+.bottom_item_text {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 29px;
+    margin-bottom: 25px;
+    color: #3C3C3C;
+}
+
+#last_text {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    margin-bottom: 10px;
+}
+
+.icon_work {
+    padding-left: 7px;
+    padding-right: 7px;
+}
+
+.bottom_item div {
+    width: 189px;
+    height: 4px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background-color: #717171;
+}
+
+.bottom_item:hover {
+    transform: scale(1.15);
+}
